# Astrum-Firmware

./: .clangd  .mxproject  Astrum.ioc  CMakeLists.txt
.github/workflows/: main.yml
Core/Inc/: RTE_Components.h  custom_conf.h  stm32h5xx_hal_conf.h  tusb_config.h
Core/Src/: app.cpp  app.hpp  custom_bus.c  gpio.c  main.c  spi.c  stm32h5xx_it.c  tim.c
Core/Src/Systems/IMU/: imu.cpp  imu.hpp
Core/Src/Systems/USB/: usb.cpp  usb.hpp  usb_descriptors.c
Core/Src/USB/: usb.cpp  usb.hpp  usb_descriptors.c
cmake/: starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
